move entities and basic bullseye structure

--- a/platformer/Justfile
+++ b/platformer/Justfile
@@ -1,11 +1,32 @@
 help:
     just --list
 
+
+__export-lua-path:
+
+
 build: 
-    p8tool build {{file_stem(invocation_directory())}}.p8 --lua main.lua
+    #!/usr/bin/env python3
+    import os
+    from pathlib import Path
+
+    dirs_in_dir = set()
+    p = Path('.')
+    lua_files = list(p.glob('**/*.lua'))
+
+    for lf in lua_files:
+        dirs_in_dir.add(str(lf.parent.resolve()))
+   
+    lua_path = ""
+    for dd in dirs_in_dir:
+        lua_path += f"{dd}\\?;{dd}\\?.lua;"
+
+    p8_name = "{{file_stem(justfile_directory())}}.p8"
+    os.system(f"p8tool build {p8_name} --lua main.lua --lua-path='{lua_path}'")
+    print("--- finish build ---")
 
 develop:
     watchexec -e lua just build
 
 minimize:
-    p8tool luamin {{file_stem(invocation_directory())}}.p8
+    p8tool luamin {{file_stem(justfile_directory())}}.p8
