--- a/marksman-p/Justfile
+++ b/marksman-p/Justfile
@@ -27,6 +27,7 @@ build:
     print(f"--- [{datetime.now()}] finish build ---")
 
 develop:
+    pico8 "{{name}}.p8"
     watchexec -e lua just build
 
 minimize:
