--- a/wasm4/w4-exp/Cargo.toml
+++ b/wasm4/w4-exp/Cargo.toml
@@ -10,6 +10,9 @@ crate-type = ["cdylib"]
 [dependencies]
 buddy-alloc = { version = "0.4.1", optional = true }
 
+[build-dependencies]
+png2wasm4src = "0.1.0"
+
 [profile.release]
 opt-level = "z"
 lto = true
