--- a/wasm4/sokobice/Cargo.toml
+++ b/wasm4/sokobice/Cargo.toml
@@ -1,21 +1,22 @@
 [package]
+edition = "2021"
 name = "cart"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-buddy-alloc = { version = "0.4.1", optional = true }
+buddy-alloc = {version = "0.4.1", optional = true}
+w4utils = {path = "./w4utils"}
 
 [build-dependencies]
 png2wasm4src = "0.1.0"
 
 [profile.release]
-opt-level = "z"
 lto = true
+opt-level = "z"
 
 [features]
 # use `--no-default-features` or comment out next line to disable allocator
