--- a/wasm4/sokobice/Cargo.toml
+++ b/wasm4/sokobice/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 buddy-alloc = {version = "0.4.1", optional = true}
+oorandom = "11.1.3"
 w4utils = {path = "./w4utils"}
 
 [build-dependencies]
@@ -17,6 +18,7 @@ png2wasm4src = "0.1.0"
 [profile.release]
 lto = true
 opt-level = "z"
+# strip = "symbols"
 
 [features]
 # use `--no-default-features` or comment out next line to disable allocator
