--- a/love2d/rectangle-lover/.vscode/settings.json
+++ b/love2d/rectangle-lover/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "Lua.diagnostics.globals": [
         "love",
+    ],
+    "Lua.runtime.version": "LuaJIT",
+    "Lua.runtime.special": {
+        "love.filesystem.load": "loadfile"
+    },
+    "Lua.workspace.library": [
+        "${3rd}/love2d/library"
     ]
 }
