--- a/ebiten/moto-tomo/.vscode/launch.json
+++ b/ebiten/moto-tomo/.vscode/launch.json
@@ -10,6 +10,10 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}",
+            "env": {
+                "GOOS":"linux",
+                "GOARCH":"amd64",    
+            }
         }
     ]
 }
