--- a/playplaymini/MiniPlayground/MiniPlayground.csproj
+++ b/playplaymini/MiniPlayground/MiniPlayground.csproj
@@ -30,8 +30,8 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="BenMakesGames.PlayPlayMini" Version="3.1.1" />
-        <PackageReference Include="BenMakesGames.PlayPlayMini.GraphicsExtensions" Version="3.1.0" />
-        <PackageReference Include="MonoGame.Extended" Version="3.8.0" />
+        <PackageReference Include="BenMakesGames.PlayPlayMini.GraphicsExtensions" Version="3.2.0" />
+        <PackageReference Include="BenMakesGames.PlayPlayMini.UI" Version="3.4.0" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     </ItemGroup>
