--- a/playplaymini/MiniPlayground/MiniPlayground.csproj
+++ b/playplaymini/MiniPlayground/MiniPlayground.csproj
@@ -13,7 +13,7 @@
     <ItemGroup>
         <None Remove="Icon.ico" />
         <None Remove="Icon.bmp" />
-        <None Update="Content\appsettings.json">
+        <None Update="Content/appsettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
@@ -26,12 +26,13 @@
         </EmbeddedResource>
     </ItemGroup>
     <ItemGroup>
-        <MonoGameContentReference Include="Content\Content.mgcb" />
+        <MonoGameContentReference Include="Content/Content.mgcb" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="BenMakesGames.PlayPlayMini" Version="3.2.0" />
         <PackageReference Include="BenMakesGames.PlayPlayMini.GraphicsExtensions" Version="3.2.0" />
         <PackageReference Include="BenMakesGames.PlayPlayMini.UI" Version="3.4.0" />
+        <PackageReference Include="Genbox.VelcroPhysics.MonoGame" Version="0.1.0-alpha.2" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     </ItemGroup>
