--- a/playplaymini/MiniPlayground/MiniPlayground.csproj
+++ b/playplaymini/MiniPlayground/MiniPlayground.csproj
@@ -33,6 +33,7 @@
         <PackageReference Include="BenMakesGames.PlayPlayMini.GraphicsExtensions" Version="3.2.0" />
         <PackageReference Include="BenMakesGames.PlayPlayMini.UI" Version="3.4.0" />
         <PackageReference Include="Genbox.VelcroPhysics.MonoGame" Version="0.1.0-alpha.2" />
+        <PackageReference Include="Genbox.VelcroPhysics.MonoGame.DebugView" Version="0.1.0-alpha.2" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     </ItemGroup>
