playing with typescript

--- a/love2d/the-roris-collection/Taskfile.yml
+++ b/love2d/the-roris-collection/Taskfile.yml
@@ -22,7 +22,7 @@ tasks:
   clean: 
     desc: Clean the game
     cmds:
-      - rm -rf game/vendor/ | true
+      - rm -rf game/ | true
       - rm -rf roris-collection.love | true
 
   build: 
