--- a/tic80/ruby_games/.devcontainer/devcontainer.json
+++ b/tic80/ruby_games/.devcontainer/devcontainer.json
@@ -6,6 +6,13 @@
 	"image": "mcr.microsoft.com/devcontainers/base:jammy",
 	"features": {
 		"ghcr.io/devcontainers/features/ruby:1": {}
+	},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"Shopify.ruby-extensions-pack"
+			]
+		}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
