--- a/tic80/ruby_games/.rubocop.yml
+++ b/tic80/ruby_games/.rubocop.yml
@@ -18,3 +18,9 @@ Layout/EndOfLine:
 
 Metrics/ParameterLists:
   Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
